update translation of articles/ to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53439

--- a/documentation/content/ru/articles/contributing/_index.adoc
+++ b/documentation/content/ru/articles/contributing/_index.adoc
@@ -1,10 +1,10 @@
 ---
 authors:
-  -
+  - 
     author: 'Jordan Hubbard'
-  -
+  - 
     author: 'Sam Lawrance'
-  -
+  - 
     author: 'Mark Linimon'
 description: 'Как внести вклад в проект FreeBSD'
 tags: ["Contributing", "FreeBSD", "Non-Programmer Tasks", "Programmer Tasks"]
@@ -194,7 +194,7 @@ https://wiki.freebsd.org/IdeasPage[Список проектов и идей Fre
 
 В случае значительного вклада в виде большого объёма работы или добавления важной новой функции в FreeBSD, почти всегда необходимо либо отправить изменения в виде tar-файлов, либо загрузить их на веб- или FTP-сайт для доступа других людей. Если у вас нет доступа к веб- или FTP-сайту, запросите на соответствующем списке рассылки FreeBSD, чтобы кто-то разместил изменения для вас.
 
-При работе с большими объемами кода неизбежно возникает деликатная тема авторских прав. FreeBSD предпочитает свободные лицензии, такие как BSD или ISC. Копилефтные лицензии, например GPLv2, иногда допускаются. Полный список можно найти на странице link:https://www.FreeBSD.org/internal/software-license/[политики лицензирования основной команды].
+При работе с большими объемами кода неизбежно возникает деликатная тема авторских прав. FreeBSD предпочитает свободные лицензии, такие как BSD или ISC. Коплефтные лицензии, например GPLv2, иногда допускаются. Полный список можно найти на странице link:https://www.FreeBSD.org/internal/software-license/[политики лицензирования основной команды].
 
 === Деньги или Оборудование
 
@@ -264,19 +264,24 @@ USA
 
 Как сопровождающему, вам потребуется управлять следующими задачами:
 
-* **Новые версии программного обеспечения и обновления.** Новые версии и обновления существующего портированного программного обеспечения появляются постоянно, и их необходимо включать в Коллекцию портов, чтобы обеспечить актуальное ПО.
+* *Новые версии программного обеспечения и обновления.* Новые версии и обновления существующего портированного программного обеспечения появляются постоянно, и их необходимо включать в Коллекцию портов, чтобы обеспечить актуальное ПО.
 
 * *Изменения в зависимостях.* Если в зависимостях вашего порта были внесены значительные изменения, возможно, его потребуется обновить, чтобы он продолжал работать корректно.
 
 * *Изменения, затрагивающие зависимые порты.* Если другие порты зависят от порта, который вы поддерживаете, изменения в вашем порте могут потребовать согласования с другими сопровождающими.
 
-* *Взаимодействие с другими пользователями, сопровождающими и разработчиками.* Часть обязанностей сопровождающего включает в себя поддержку. От вас не ожидают предоставления общей поддержки (но мы приветствуем это, если вы решите её оказывать). Ваша задача — быть точкой координации по вопросам, связанным с вашими портами, специфичным для FreeBSD.
+* *Взаимодействие с другими пользователями, сопровождающими и разработчиками.* Часть обязанностей сопровождающего включает в себя поддержку.
+  От вас не ожидают предоставления общей поддержки (но мы приветствуем это, если вы решите её оказывать). Ваша задача — быть точкой координации по вопросам, связанным с вашими портами, специфичным для FreeBSD.
 
-* *Поиск ошибок.* Порт может быть подвержен ошибкам, специфичным для FreeBSD. Вам потребуется исследовать, находить и исправлять эти ошибки при их поступлении. Ещё лучше тщательно тестировать порт для выявления проблем до их попадания в Коллекцию портов.
+* *Поиск ошибок.* Порт может быть подвержен ошибкам, специфичным для FreeBSD.
+  Вам потребуется исследовать, находить и исправлять эти ошибки при их поступлении.
+  Ещё лучше тщательно тестировать порт для выявления проблем до их попадания в Коллекцию портов.
 
-* *Изменения в инфраструктуре и политике портов.* Иногда обновляются системы, используемые для сборки портов и пакетов, или появляются новые рекомендации, влияющие на инфраструктуру. Вам следует учитывать эти изменения, если ваши порты затронуты и требуют обновления.
+* *Изменения в инфраструктуре и политике портов.* Иногда обновляются системы, используемые для сборки портов и пакетов, или появляются новые рекомендации, влияющие на инфраструктуру.
+  Вам следует учитывать эти изменения, если ваши порты затронуты и требуют обновления.
 
-* *Изменения в базовой системе.* FreeBSD находится в постоянной разработке. Изменения в программном обеспечении, библиотеках, ядре или даже изменения политики могут вызвать каскадные требования к изменениям в портах.
+* *Изменения в базовой системе.* FreeBSD находится в постоянной разработке.
+  Изменения в программном обеспечении, библиотеках, ядре или даже изменения политики могут вызвать каскадные требования к изменениям в портах.
 
 ==== Обязанности сопровождающего
 
@@ -312,7 +317,7 @@ USA
 +
 [NOTE]
 ======
-Пожалуйста, не отправляйте архив man:shar[1] всего порта; вместо этого используйте man:git-format-patch[1] или man:diff[1] `-ruN`. Таким образом, коммиттеры смогут гораздо проще увидеть, какие именно изменения были внесены. Раздел extref:{porters-handbook}[Обновление, port-upgrading] в Руководстве портера содержит дополнительную информацию.
+Пожалуйста, не отправляйте архив man:shar[1] всего порта; вместо этого используйте man:git-format-patch[1] или man:diff[1] `-ruN`. Таким образом, коммиттеры смогут гораздо проще увидеть, какие именно изменения были внесены. Раздел extref:{porters-handbook}[Обновление, port-upgrading] в Руководстве FreeBSD по созданию портов содержит дополнительную информацию.
 ======
 . Ждите
 +
