--- a/documentation/content/ru/articles/leap-seconds/_index.po
+++ b/documentation/content/ru/articles/leap-seconds/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-22 22:32+0300\n"
-"PO-Revision-Date: 2025-09-16 04:45+0000\n"
+"POT-Creation-Date: 2022-02-01 09:21-0300\n"
+"PO-Revision-Date: 2025-09-23 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesleap-seconds_index/ru/>\n"
@@ -18,11 +18,12 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/leap-seconds/_index.adoc:1
 #, no-wrap
 msgid "A short description of how leap seconds are handled on FreeBSD"
-msgstr "Краткое описание обработки високосных секунд (секунд координации) в FreeBSD"
+msgstr ""
+"Краткое описание обработки високосных секунд (секунд координации) в FreeBSD"
 
 #. type: Title =
 #: documentation/content/en/articles/leap-seconds/_index.adoc:1
@@ -68,13 +69,13 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/leap-seconds/_index.adoc:52
 msgid ""
-"Leap seconds are announced by https://www.iers.org/IERS/EN/Home/"
-"home_node.html[IERS] on https://datacenter.iers.org/data/latestVersion/"
-"16_BULLETIN_C16.txt[Bulletin C]."
+"Leap seconds are announced by https://www.iers.org/IERS/EN/Home/home_node."
+"html[IERS] on https://datacenter.iers.org/data/latestVersion/16_BULLETIN_C16."
+"txt[Bulletin C]."
 msgstr ""
-"Секунды координации объявляются https://www.iers.org/IERS/EN/Home/"
-"home_node.html[IERS] в https://datacenter.iers.org/data/latestVersion/"
-"16_BULLETIN_C16.txt[Бюллетене C]."
+"Секунды координации объявляются https://www.iers.org/IERS/EN/Home/home_node."
+"html[IERS] в https://datacenter.iers.org/data/latestVersion/16_BULLETIN_C16."
+"txt[Бюллетене C]."
 
 #. type: Plain text
 #: documentation/content/en/articles/leap-seconds/_index.adoc:55
@@ -82,9 +83,8 @@ msgid ""
 "Standard leap second behavior is described in https://datatracker.ietf.org/"
 "doc/html/rfc7164#section-3[RFC 7164].  Also see man:time2posix[3]."
 msgstr ""
-"Стандартное поведение високосной секунды описано в https://"
-"datatracker.ietf.org/doc/html/rfc7164#section-3[RFC 7164]. Также см. "
-"man:time2posix[3]."
+"Стандартное поведение високосной секунды описано в https://datatracker.ietf."
+"org/doc/html/rfc7164#section-3[RFC 7164]. Также см. man:time2posix[3]."
 
 #. type: Title ==
 #: documentation/content/en/articles/leap-seconds/_index.adoc:57
@@ -103,8 +103,8 @@ msgid ""
 "adjustments are necessary."
 msgstr ""
 "Самый простой способ обработки високосных секунд — использование правил "
-"времени POSIX, которые FreeBSD использует по умолчанию, в сочетании с extref:"
-"{handbook}[NTP, network-ntp]. Когда man:ntpd[8] работает и время "
+"времени POSIX, которые FreeBSD использует по умолчанию, в сочетании с "
+"extref:{handbook}[NTP, network-ntp]. Когда man:ntpd[8] работает и время "
 "синхронизировано с вышестоящими серверами NTP, которые корректно "
 "обрабатывают високосные секунды, високосная секунда приведёт к "
 "автоматическому повтору последней секунды дня в системном времени. Другие "
@@ -113,9 +113,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/leap-seconds/_index.adoc:64
 msgid ""
-"If the upstream NTP servers do not handle leap seconds correctly, "
-"man:ntpd[8] will step the time by one second after the errant upstream "
-"server has noticed and stepped itself."
+"If the upstream NTP servers do not handle leap seconds correctly, man:"
+"ntpd[8] will step the time by one second after the errant upstream server "
+"has noticed and stepped itself."
 msgstr ""
 "Если вышестоящие серверы NTP не обрабатывают високосные секунды корректно, "
 "man:ntpd[8] изменит время на одну секунду после того, как ошибочный "
