--- a/documentation/content/ru/articles/mailing-list-faq/_index.adoc
+++ b/documentation/content/ru/articles/mailing-list-faq/_index.adoc
@@ -106,7 +106,7 @@ toc::[]
 
 * Письма должны соответствовать уставу списка рассылки.
 * Личные нападки недопустимы. Как ответственные участники сетевого сообщества, мы должны придерживаться высоких стандартов поведения.
-* Спам не разрешён. Нарушители данного правила будут забаненны.
+* Спам не разрешён. Нарушители данного правила будут забанены.
 
 === Что считается хорошим этикетом при посылке писем в списки рассылки?
 
