--- a/documentation/content/ru/articles/mailing-list-faq/_index.po
+++ b/documentation/content/ru/articles/mailing-list-faq/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-30 21:16+0300\n"
-"PO-Revision-Date: 2025-09-30 04:45+0000\n"
+"POT-Creation-Date: 2025-05-01 19:57-0300\n"
+"PO-Revision-Date: 2025-10-29 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesmailing-list-faq_index/ru/>\n"
@@ -18,11 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:1
 #, no-wrap
 msgid "How to best use the mailing lists, such as how to help avoid frequently-repeated discussions"
-msgstr "Как оптимально использовать почтовые рассылки, в том числе как избежать часто повторяющихся обсуждений"
+msgstr ""
+"Как оптимально использовать почтовые рассылки, в том числе как избежать "
+"часто повторяющихся обсуждений"
 
 #. type: Title =
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:1
@@ -53,8 +55,8 @@ msgstr ""
 "сервере FreeBSD]. Вы можете получить данную статью в виде одного большого "
 "link:.[HTML] файла, используя HTTP протокол или в виде простого текста, "
 "форматов PostScript, PDF, и других с https://download.freebsd.org/doc/[FTP "
-"сервера FreeBSD]. Возможно вы захотите link:https://www.FreeBSD.org/search/"
-"[Найти FAQ]."
+"сервера FreeBSD]. Возможно вы захотите link:https://www.FreeBSD.org/search/["
+"Найти FAQ]."
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:51
@@ -126,8 +128,8 @@ msgid ""
 msgstr ""
 "Это зависит от регламента каждой конкретной рассылки. Некоторые списки "
 "больше ориентированы на разработчиков, некоторые - на всё сообщество FreeBSD "
-"в целом. Актуальную информацию смотрите по ссылке: link:https://"
-"lists.FreeBSD.org/[этот список]."
+"в целом. Актуальную информацию смотрите по ссылке: link:https://lists.FreeBSD"
+".org/[этот список]."
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:75
@@ -233,10 +235,9 @@ msgid ""
 "https://lists.freebsd.org/pipermail[mailman archive] and link:https://"
 "lists.freebsd.org/archives[mlmmj archive] directly."
 msgstr ""
-"Да. Архивы со всеми письмами с 1994 года доступны link:https://mail-"
-"archive.freebsd.org/mail/[здесь]. Вот ссылки на https://lists.freebsd.org/"
-"pipermail[архив mailman] и link:https://lists.freebsd.org/archives[архив "
-"mlmmj]."
+"Да. Архивы со всеми письмами с 1994 года доступны link:https://mail-archive."
+"freebsd.org/mail/[здесь]. Вот ссылки на https://lists.freebsd.org/pipermail["
+"архив mailman] и link:https://lists.freebsd.org/archives[архив mlmmj]."
 
 #. type: Title ===
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:104
@@ -288,8 +289,8 @@ msgid ""
 msgstr ""
 "Вы уже сделали важный шаг, решив прочитать эту статью. Если вы новичок во "
 "FreeBSD, то сначала ознакомьтесь с программным обеспечением и связанной с "
-"нею документацией, включающей множество extref:https://www.FreeBSD.org/docs/"
-"[книг и статьей]. Могут быть интересными: extref:{faq}[Часто задаваемые "
+"нею документацией, включающей множество extref:https://www.FreeBSD.org/docs/["
+"книг и статьей]. Могут быть интересными: extref:{faq}[Часто задаваемые "
 "вопросы по FreeBSD (FAQ)], extref:{handbook}[Руководство по FreeBSD], и "
 "статьи extref:{freebsd-questions-article}[Как работать со списком рассылки "
 "FreeBSD-questions с максимальной отдачей], extref:{explaining-bsd}[Что такое "
@@ -338,7 +339,7 @@ msgstr ""
 msgid ""
 "Spam is not allowed, ever. The mailing lists are actively processed to ban "
 "offenders to this rule."
-msgstr "Спам не разрешён. Нарушители данного правила будут забаненны."
+msgstr "Спам не разрешён. Нарушители данного правила будут забанены."
 
 #. type: Title ===
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:131
@@ -368,11 +369,11 @@ msgid ""
 msgstr ""
 "Пожалуйста, обращайте внимание на тот факт, что пропускная способность "
 "ограничена. Не каждый читает почту через высокоскоростное соединение. Если "
-"вы отправляете содержимое какого-нибудь файла, например "
-"[.filename]#config.log# или объёмную трассировку стека, то, пожалуйста, "
-"размещайте его на каком-нибудь веб-сайте и присылайте просто ссылку на него. "
-"Помните, что такие сообщения будут заархивированны, и это просто добавит "
-"ненужные байты к архиву."
+"вы отправляете содержимое какого-нибудь файла, например [.filename]#config."
+"log# или объёмную трассировку стека, то, пожалуйста, размещайте его на каком-"
+"нибудь веб-сайте и присылайте просто ссылку на него. Помните, что такие "
+"сообщения будут заархивированны, и это просто добавит ненужные байты к "
+"архиву."
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:136
@@ -491,8 +492,8 @@ msgstr ""
 "трудно, и здесь легко сделать ошибку. Чтобы послать содержимое файлов "
 "протоколов, сделайте копию файла и воспользуйтесь редактором для того, чтобы "
 "обрезать информацию, оставив только относящуюся к делу, либо скопируйте и "
-"вставьте текст в ваше сообщение. В случае вывода программ, таких, как "
-"`dmesg`, перенаправьте вывод в файл и включите его в письмо. Например,"
+"вставьте текст в ваше сообщение. В случае вывода программ, таких, как `dmesg`"
+", перенаправьте вывод в файл и включите его в письмо. Например,"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:154
@@ -521,15 +522,17 @@ msgstr ""
 "операции отрицательно сказываются на формате строк. Особенно это стоит "
 "учесть при посылке содержимого файлов [.filename]#Makefile#, где `tab` "
 "является важным символом. Это довольно часто встречающаяся проблема в "
-"link:https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В "
-"[.filename]#Makefile# символы tab меняются на пробелы, или раздражающие "
-"`=3B` escape последовательности."
+"link:https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В ["
+".filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` "
+"escape последовательности."
 
 #. type: Title ===
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:159
 #, no-wrap
 msgid "What are the special etiquette consideration when replying to an existing posting on the mailing lists?"
-msgstr "Каких правил этикета стоит придерживаться при ответе на уже существующее сообщение?"
+msgstr ""
+"Каких правил этикета стоит придерживаться при ответе на уже существующее "
+"сообщение?"
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:162
