--- a/documentation/content/ru/articles/serial-uart/_index.adoc
+++ b/documentation/content/ru/articles/serial-uart/_index.adoc
@@ -114,7 +114,7 @@ USART Universal Synchronous-Asynchronous Receiver/Transmitter — Универс
 
 В стандарте RS232-C сигнал «Marking» (логическая `1`) представлен напряжением от -2 В до -12 В, а сигнал «Spacing» (логический `0`) — напряжением от 0 В до +12 В. Передатчик должен выдавать +12 В или -12 В, а приёмник должен учитывать возможные потери напряжения в длинных кабелях. Некоторые маломощные передатчики (например, в портативных компьютерах) иногда используют только +5 В и -5 В, но эти значения всё ещё допустимы для приёмника RS232-C при условии использования коротких кабелей.
 
-==== Cигнал Break в RS232-C
+==== Сигнал Break в RS232-C
 
 RS232-C также определяет сигнал под названием `Break`, который вызывается передачей непрерывных значений Spacing (без стартовых или стоповых битов). Когда на линии данных отсутствует напряжение, считается, что линия передает `Break`.
 
