--- a/documentation/content/ru/articles/filtering-bridges/_index.po
+++ b/documentation/content/ru/articles/filtering-bridges/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-23 18:56+0300\n"
-"PO-Revision-Date: 2025-09-23 04:45+0000\n"
+"POT-Creation-Date: 2024-01-17 20:35-0300\n"
+"PO-Revision-Date: 2025-09-26 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfiltering-bridges_index/ru/>\n"
@@ -18,11 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:1
 #, no-wrap
 msgid "Configuring firewalls and filtering on FreeBSD hosts acting as bridges rather than routers"
-msgstr "Настройка межсетевых экранов и фильтрации на хостах FreeBSD, выступающих в роли мостов, а не маршрутизаторов"
+msgstr ""
+"Настройка межсетевых экранов и фильтрации на хостах FreeBSD, выступающих в "
+"роли мостов, а не маршрутизаторов"
 
 #. type: Title =
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:1
@@ -200,7 +202,7 @@ msgid ""
 "firewall and the third one is the logging functions of the firewall."
 msgstr ""
 "Первая строка компилирует поддержку моста, вторая — межсетевой экран, а "
-"третья — функции логирования межсетевого экрана."
+"третья — функции журналирования межсетевого экрана."
 
 #. type: Plain text
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:100
@@ -226,8 +228,8 @@ msgid ""
 "thing to do now is add the following row to [.filename]#/boot/loader.conf#:"
 msgstr ""
 "Если вы выбрали использование нового и более простого метода установки, "
-"единственное, что нужно сделать сейчас, это добавить следующую строку в "
-"[.filename]#/boot/loader.conf#:"
+"единственное, что нужно сделать сейчас, это добавить следующую строку в [."
+"filename]#/boot/loader.conf#:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:109
@@ -266,8 +268,8 @@ msgid ""
 "configuration will avoid you to remain isolated from the network).  Put "
 "these lines in [.filename]#/etc/rc.conf#:"
 msgstr ""
-"Прежде чем перезагрузиться для загрузки нового ядра или необходимых модулей "
-"(в соответствии с выбранным ранее методом установки), необходимо внести "
+"Прежде чем перезагрузиться для загрузки нового ядра или необходимых модулей ("
+"в соответствии с выбранным ранее методом установки), необходимо внести "
 "некоторые изменения в конфигурационный файл [.filename]#/etc/rc.conf#.  "
 "Правило по умолчанию для межсетевого экрана — отклонять все IP-пакеты.  "
 "Изначально мы настроим `открытый` межсетевой экран, чтобы проверить его "
@@ -292,16 +294,16 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:131
 msgid ""
-"The first row will enable the firewall (and will load the module "
-"[.filename]#ipfw.ko# if it is not compiled in the kernel), the second one to "
+"The first row will enable the firewall (and will load the module [."
+"filename]#ipfw.ko# if it is not compiled in the kernel), the second one to "
 "set up it in `open` mode (as explained in [.filename]#/etc/rc.firewall#), "
 "the third one to not show rules loading and the fourth one to enable logging "
 "support."
 msgstr ""
-"Первая строка включит межсетевой экран (и загрузит модуль "
-"[.filename]#ipfw.ko#, если он не встроен в ядро), вторая настроит его в "
-"режиме `open` (как описано в [.filename]#/etc/rc.firewall#), третья отключит "
-"отображение загрузки правил, а четвёртая включит поддержку логирования."
+"Первая строка включит межсетевой экран (и загрузит модуль [.filename]#ipfw."
+"ko#, если он не встроен в ядро), вторая настроит его в режиме `open` (как "
+"описано в [.filename]#/etc/rc.firewall#), третья отключит отображение "
+"загрузки правил, а четвёртая включит поддержку журналирования."
 
 #. type: Plain text
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:137
@@ -317,8 +319,8 @@ msgid ""
 "interface (the one connected to Internet, where DNS server resides), since "
 "the bridge will be activated at the end of the startup procedure.  It means "
 "that the [.filename]#fxp0# interface (in our case) must be mentioned in the "
-"ifconfig section of the [.filename]#/etc/rc.conf# file, while the "
-"[.filename]#xl0# is not.  Assigning an IP to both the network cards does not "
+"ifconfig section of the [.filename]#/etc/rc.conf# file, while the [."
+"filename]#xl0# is not.  Assigning an IP to both the network cards does not "
 "make much sense, unless, during the start procedure, applications should "
 "access to services on both Ethernet segments."
 msgstr ""
@@ -357,8 +359,8 @@ msgstr ""
 "Чтобы обеспечить связь между двумя хостами, разделёнными мостом, необходимо, "
 "чтобы мост передавал ARP-пакеты. Этот протокол не включён в уровень IP, так "
 "как он существует только при работе IP поверх Ethernet. Межсетевой экран "
-"FreeBSD фильтрует исключительно на уровне IP, поэтому все не-IP пакеты "
-"(включая ARP) будут передаваться без фильтрации, даже если межсетевой экран "
+"FreeBSD фильтрует исключительно на уровне IP, поэтому все не-IP пакеты ("
+"включая ARP) будут передаваться без фильтрации, даже если межсетевой экран "
 "настроен на запрет всего."
 
 #. type: Plain text
@@ -395,9 +397,9 @@ msgid ""
 "commands (having the shrewdness to replace the names of the two network "
 "interfaces [.filename]#fxp0# and [.filename]#xl0# with your own ones):"
 msgstr ""
-"На этом этапе, чтобы включить мост, необходимо выполнить следующие команды "
-"(с учётом замены имён двух сетевых интерфейсов [.filename]#fxp0# и "
-"[.filename]#xl0# на ваши собственные):"
+"На этом этапе, чтобы включить мост, необходимо выполнить следующие команды ("
+"с учётом замены имён двух сетевых интерфейсов [.filename]#fxp0# и [."
+"filename]#xl0# на ваши собственные):"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:159
@@ -472,8 +474,8 @@ msgstr ""
 "фильтруемых мостом, можно использовать только команды `pass` или `drop`. "
 "Более сложные действия, такие как `divert`, `forward` или `reject`, "
 "недоступны. Такие опции всё ещё можно использовать, но только для трафика, "
-"направленного на саму машину моста или исходящего от неё (если у неё есть IP-"
-"адрес)."
+"направленного на саму машину моста или исходящего от неё (если у неё есть "
+"IP-адрес)."
 
 #. type: Plain text
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:185
@@ -509,12 +511,12 @@ msgid ""
 "Let's look at an example setup.  Note first that at the top of [.filename]#/"
 "etc/rc.firewall# there are already standard rules for the loopback interface "
 "[.filename]#lo0#, so we should not have to care for them anymore.  Custom "
-"rules should be put in a separate file (say [.filename]#/etc/"
-"rc.firewall.local#) and loaded at system startup, by modifying the row of "
-"[.filename]#/etc/rc.conf# where we defined the `open` firewall:"
+"rules should be put in a separate file (say [.filename]#/etc/rc.firewall."
+"local#) and loaded at system startup, by modifying the row of [.filename]#/"
+"etc/rc.conf# where we defined the `open` firewall:"
 msgstr ""
-"Рассмотрим пример настройки. Обратите внимание, что в начале файла "
-"[.filename]#/etc/rc.firewall# уже есть стандартные правила для loopback-"
+"Рассмотрим пример настройки. Обратите внимание, что в начале файла [."
+"filename]#/etc/rc.firewall# уже есть стандартные правила для loopback-"
 "интерфейса (интерфейса обратной петли) [.filename]#lo0#, поэтому нам не "
 "нужно о них заботиться. Пользовательские правила следует поместить в "
 "отдельный файл (например, [.filename]#/etc/rc.firewall.local#) и загружать "
