--- a/documentation/content/ru/articles/linux-users/_index.po
+++ b/documentation/content/ru/articles/linux-users/_index.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-22 19:04+0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: 2025-08-06 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,13 +18,15 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/linux-users/_index.adoc:1
 #, no-wrap
 msgid "This document is intended to quickly familiarize intermediate to advanced Linux® users with the basics of FreeBSD."
-msgstr "Этот документ предназначен для быстрого ознакомления с основами FreeBSD пользователей Linux® среднего и продвинутого уровня."
+msgstr ""
+"Этот документ предназначен для быстрого ознакомления с основами FreeBSD "
+"пользователей Linux® среднего и продвинутого уровня."
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/articles/linux-users/_index.adoc:1
 #, no-wrap
 msgid "FreeBSD Quickstart Guide for Linux® Users"
@@ -115,8 +117,8 @@ msgid ""
 "However, Bash and other shells are available for installation using the "
 "FreeBSD extref:{handbook}[Packages and Ports Collection, ports]."
 msgstr ""
-"Однако Bash и другие оболочки доступны для установки через extref:{handbook}"
-"[Коллекцию портов и пакетов FreeBSD, ports]."
+"Однако Bash и другие оболочки доступны для установки через extref:{handbook}["
+"Коллекцию портов и пакетов FreeBSD, ports]."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:75
@@ -210,8 +212,8 @@ msgid ""
 "A complete list of all available ports and packages can be found https://"
 "ports.freebsd.org[here]."
 msgstr ""
-"Полный список всех доступных портов и пакетов можно найти https://"
-"ports.freebsd.org[здесь]."
+"Полный список всех доступных портов и пакетов можно найти https://ports."
+"freebsd.org[здесь]."
 
 #. type: Title ===
 #: documentation/content/en/articles/linux-users/_index.adoc:98
@@ -222,16 +224,15 @@ msgstr "Пакеты"
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:103
 msgid ""
-"Packages are pre-compiled applications, the FreeBSD equivalents of "
-"[.filename]#.deb# files on Debian/Ubuntu based systems and [.filename]#.rpm# "
+"Packages are pre-compiled applications, the FreeBSD equivalents of [."
+"filename]#.deb# files on Debian/Ubuntu based systems and [.filename]#.rpm# "
 "files on Red Hat/Fedora based systems.  Packages are installed using `pkg`.  "
 "For example, the following command installs Apache 2.4:"
 msgstr ""
-"Пакеты — это предварительно скомпилированные приложения, эквиваленты файлов "
-"[.filename]#.deb# в системах на основе Debian/Ubuntu и файлов "
-"[.filename]#.rpm# в системах на основе Red Hat/Fedora. Пакеты "
-"устанавливаются с помощью `pkg`. Например, следующая команда устанавливает "
-"Apache 2.4:"
+"Пакеты — это предварительно скомпилированные приложения, эквиваленты файлов ["
+".filename]#.deb# в системах на основе Debian/Ubuntu и файлов [.filename]#."
+"rpm# в системах на основе Red Hat/Fedora. Пакеты устанавливаются с помощью "
+"`pkg`. Например, следующая команда устанавливает Apache 2.4:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/linux-users/_index.adoc:107
@@ -276,8 +277,8 @@ msgid ""
 msgstr ""
 "Коллекция портов, иногда называемая деревом портов, может быть установлена в "
 "[.filename]#/usr/ports# с помощью link:{handbook}mirrors/#git[Git]. "
-"Подробные инструкции по установке Коллекции портов можно найти в extref:"
-"{handbook}ports/[разделе 4.5.1, ports-using-installation-methods] "
+"Подробные инструкции по установке Коллекции портов можно найти в "
+"extref:{handbook}ports/[разделе 4.5.1, ports-using-installation-methods] "
 "Руководства FreeBSD."
 
 #. type: Plain text
@@ -341,13 +342,13 @@ msgid ""
 "Many Linux(R) distributions use the SysV init system, whereas FreeBSD uses "
 "the traditional BSD-style man:init[8].  Under the BSD-style man:init[8], "
 "there are no run-levels and [.filename]#/etc/inittab# does not exist.  "
-"Instead, startup is controlled by man:rc[8] scripts.  At system boot, "
-"[.filename]#/etc/rc# reads [.filename]#/etc/rc.conf# and [.filename]#/etc/"
+"Instead, startup is controlled by man:rc[8] scripts.  At system boot, [."
+"filename]#/etc/rc# reads [.filename]#/etc/rc.conf# and [.filename]#/etc/"
 "defaults/rc.conf# to determine which services are to be started.  The "
 "specified services are then started by running the corresponding service "
 "initialization scripts located in [.filename]#/etc/rc.d/# and [.filename]#/"
-"usr/local/etc/rc.d/#. These scripts are similar to the scripts located in "
-"[.filename]#/etc/init.d/# on Linux(R) systems."
+"usr/local/etc/rc.d/#. These scripts are similar to the scripts located in [."
+"filename]#/etc/init.d/# on Linux(R) systems."
 msgstr ""
 "Многие дистрибутивы Linux(R) используют систему инициализации SysV, тогда "
 "как FreeBSD использует традиционный BSD-стиль man:init[8]. В BSD-стиле "
@@ -356,8 +357,8 @@ msgstr ""
 "man:rc[8]. При загрузке системы [.filename]#/etc/rc# читает [.filename]#/etc/"
 "rc.conf# и [.filename]#/etc/defaults/rc.conf#, чтобы определить, какие "
 "службы должны быть запущены. Указанные службы затем запускаются путем "
-"выполнения соответствующих сценариев инициализации, расположенных в "
-"[.filename]#/etc/rc.d/# и [.filename]#/usr/local/etc/rc.d/#. Эти сценарии "
+"выполнения соответствующих сценариев инициализации, расположенных в [."
+"filename]#/etc/rc.d/# и [.filename]#/usr/local/etc/rc.d/#. Эти сценарии "
 "аналогичны сценариям, расположенным в [.filename]#/etc/init.d/# в системах "
 "Linux(R)."
 
@@ -365,9 +366,9 @@ msgstr ""
 #: documentation/content/en/articles/linux-users/_index.adoc:150
 msgid ""
 "The scripts found in [.filename]#/etc/rc.d/# are for applications that are "
-"part of the \"base\" system, such as man:cron[8], man:sshd[8], and "
-"man:syslog[3].  The scripts in [.filename]#/usr/local/etc/rc.d/# are for "
-"user-installed applications such as Apache and Squid."
+"part of the \"base\" system, such as man:cron[8], man:sshd[8], and man:"
+"syslog[3].  The scripts in [.filename]#/usr/local/etc/rc.d/# are for user-"
+"installed applications such as Apache and Squid."
 msgstr ""
 "Скрипты, расположенные в [.filename]#/etc/rc.d/#, предназначены для "
 "приложений, входящих в \"базовую\" систему, таких как man:cron[8], "
@@ -388,31 +389,31 @@ msgid ""
 msgstr ""
 "Поскольку FreeBSD разрабатывается как полноценная операционная система, "
 "пользовательские приложения не считаются частью «базовой» системы. "
-"Пользовательские приложения обычно устанавливаются с помощью extref:"
-"{handbook}ports/[Пакетов или Портов, ports-using]. Чтобы отделить их от "
-"базовой системы, пользовательские приложения устанавливаются в [.filename]#/"
-"usr/local/#. Таким образом, исполняемые файлы пользовательских приложений "
-"находятся в [.filename]#/usr/local/bin/#, конфигурационные файлы — в "
-"[.filename]#/usr/local/etc/# и так далее."
+"Пользовательские приложения обычно устанавливаются с помощью "
+"extref:{handbook}ports/[Пакетов или Портов, ports-using]. Чтобы отделить их "
+"от базовой системы, пользовательские приложения устанавливаются в [."
+"filename]#/usr/local/#. Таким образом, исполняемые файлы пользовательских "
+"приложений находятся в [.filename]#/usr/local/bin/#, конфигурационные файлы —"
+" в [.filename]#/usr/local/etc/# и так далее."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:160
 msgid ""
 "Services are enabled by adding an entry for the service in [.filename]#/etc/"
-"rc.conf#.  The system defaults are found in [.filename]#/etc/defaults/"
-"rc.conf# and these default settings are overridden by settings in "
-"[.filename]#/etc/rc.conf#.  Refer to man:rc.conf[5] for more information "
-"about the available entries.  When installing additional applications, "
-"review the application's install message to determine how to enable any "
-"associated services."
+"rc.conf#.  The system defaults are found in [.filename]#/etc/defaults/rc."
+"conf# and these default settings are overridden by settings in [.filename]#/"
+"etc/rc.conf#.  Refer to man:rc.conf[5] for more information about the "
+"available entries.  When installing additional applications, review the "
+"application's install message to determine how to enable any associated "
+"services."
 msgstr ""
-"Сервисы включаются путем добавления соответствующей записи в файл "
-"[.filename]#/etc/rc.conf#. Системные параметры по умолчанию находятся в "
-"файле [.filename]#/etc/defaults/rc.conf#, а настройки по умолчанию "
-"переопределяются параметрами из файла [.filename]#/etc/rc.conf#. Подробнее о "
-"доступных параметрах можно узнать в man:rc.conf[5]. При установке "
-"дополнительных приложений ознакомьтесь с сообщением установки, чтобы "
-"определить, как включить связанные сервисы."
+"Сервисы включаются путем добавления соответствующей записи в файл [."
+"filename]#/etc/rc.conf#. Системные параметры по умолчанию находятся в файле ["
+".filename]#/etc/defaults/rc.conf#, а настройки по умолчанию переопределяются "
+"параметрами из файла [.filename]#/etc/rc.conf#. Подробнее о доступных "
+"параметрах можно узнать в man:rc.conf[5]. При установке дополнительных "
+"приложений ознакомьтесь с сообщением установки, чтобы определить, как "
+"включить связанные сервисы."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:162
@@ -528,14 +529,14 @@ msgstr ""
 #: documentation/content/en/articles/linux-users/_index.adoc:213
 msgid ""
 "An IP address can be assigned to an interface using man:ifconfig[8].  To "
-"remain persistent across reboots, the IP configuration must be included in "
-"[.filename]#/etc/rc.conf#.  The following [.filename]#/etc/rc.conf# entries "
+"remain persistent across reboots, the IP configuration must be included in [."
+"filename]#/etc/rc.conf#.  The following [.filename]#/etc/rc.conf# entries "
 "specify the hostname, IP address, and default gateway:"
 msgstr ""
 "IP-адрес может быть назначен интерфейсу с помощью man:ifconfig[8]. Чтобы "
 "настройки сохранялись после перезагрузки, конфигурация IP должна быть "
-"указана в [.filename]#/etc/rc.conf#. Следующие записи в [.filename]#/etc/"
-"rc.conf# задают имя хоста, IP-адрес и шлюз по умолчанию:"
+"указана в [.filename]#/etc/rc.conf#. Следующие записи в [.filename]#/etc/rc."
+"conf# задают имя хоста, IP-адрес и шлюз по умолчанию:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/linux-users/_index.adoc:219
@@ -743,8 +744,8 @@ msgstr "procfs: ушёл, но не забыт"
 #: documentation/content/en/articles/linux-users/_index.adoc:301
 msgid ""
 "In some Linux(R) distributions, one could look at [.filename]#/proc/sys/net/"
-"ipv4/ip_forward# to determine if IP forwarding is enabled.  In FreeBSD, "
-"man:sysctl[8] is instead used to view this and other system settings."
+"ipv4/ip_forward# to determine if IP forwarding is enabled.  In FreeBSD, man:"
+"sysctl[8] is instead used to view this and other system settings."
 msgstr ""
 "В некоторых дистрибутивах Linux(R) можно посмотреть файл [.filename]#/proc/"
 "sys/net/ipv4/ip_forward#, чтобы определить, включена ли IP-маршрутизация. В "
@@ -802,8 +803,8 @@ msgid ""
 "Including `noauto` will prevent [.filename]#/proc# from being automatically "
 "mounted at boot."
 msgstr ""
-"Добавление `noauto` предотвратит автоматическое монтирование [.filename]#/"
-"proc# при загрузке."
+"Добавление `noauto` предотвратит автоматическое монтирование [."
+"filename]#/proc# при загрузке."
 
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:327
