website/security: Update support model for 15R
PR:		274197
Reviewed by:	dch
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/567

--- a/website/content/en/security/_index.adoc
+++ b/website/content/en/security/_index.adoc
@@ -116,6 +116,6 @@ In the run-up to a release, a number of -BETA and -RC releases may be published 
 [[model]]
 == The FreeBSD support model
 
-Under the current support model, each major version's stable branch is explicitly supported for 5 years, while each individual point release is only supported for three months after the next point release.
+Each minor release is only supported for three months after the next minor release within the same major version, or (for the final minor release) until support for the major version's stable branch ends. From FreeBSD 15 onward, each stable branch is explicitly supported for 4 years from its dot-zero release. Support for the stable branch of FreeBSD 13 ends on April 30, 2026, and for FreeBSD 14 on November 30, 2028.
 
-The details and rationale behind this model can be found in the https://lists.freebsd.org/pipermail/freebsd-announce/2015-February/001624.html[official announcement] sent in February 2015.
+This model's rationale is detailed in the official announcements of https://lists.freebsd.org/archives/freebsd-announce/2024-July/000143.html[the 4-year support period for stable branches], sent in July 2024, and https://lists.freebsd.org/pipermail/freebsd-announce/2015-February/001624.html[the switch to a branch-based support model], sent in February 2015.
